--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <title>Shopping List</title>
   </head>
   <body>
+
+    <div>
+      <h1>Allages</h1>
+    </div>
     <div class="container">
       <header>
         <img src="images/note.png" alt="" />
