--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Shopping List</title>
+    <title>Bootcamp star</title>
   </head>
   <body>
 
@@ -22,7 +22,7 @@
     <div class="container">
       <header>
         <img src="images/note.png" alt="" />
-        <h1 id="app-title">Shopping List</h1>
+        <h3 id="app-title">Shopping List</h3>
       </header>
       <form id="item-form">
         <div class="form-control">
